hw2/y.output
   0  $accept : program $end

   1  program : translation_unit

   2  translation_unit : external_declaration
   3                   | translation_unit external_declaration

   4  external_declaration : function_definition
   5                       | declaration

   6  function_definition : declaration_specifiers declarator compound_statement
   7                      | declaration_specifiers declarator declaration_list compound_statement
   8                      | declarator compound_statement
   9                      | declarator declaration_list compound_statement

  10  declaration_list : declaration
  11                   | declaration_list declaration

  12  compound_statement : '{' '}'
  13                     | '{' compound_list '}'

  14  compound_list : statement
  15                | declaration
  16                | compound_list statement
  17                | compound_list declaration

  18  statement : compound_statement
  19            | expression_statement
  20            | selection_statement
  21            | labeled_statement
  22            | iteration_statement
  23            | jump_statement

  24  labeled_statement : IDENTIFIER ':' statement
  25                    | CASE conditional_expression ':' statement
  26                    | DEFAULT ':' statement

  27  selection_statement : IF '(' expression ')' compound_statement
  28                      | IF '(' expression ')' compound_statement ELSE compound_statement
  29                      | SWITCH '(' expression ')' compound_statement

  30  iteration_statement : WHILE '(' expression ')' statement
  31                      | DO statement WHILE '(' expression ')' ';'
  32                      | FOR '(' expression_statement expression_statement ')' statement
  33                      | FOR '(' expression_statement expression_statement expression ')' statement

  34  jump_statement : CONTINUE ';'
  35                 | BREAK ';'
  36                 | RETURN ';'
  37                 | RETURN expression ';'

  38  expression_statement : ';'
  39                       | expression ';'

  40  declaration : scalar_declaration ';'
  41              | array_declaration ';'
  42              | const_declaration ';'
  43              | function_declaration ';'

  44  scalar_declaration : declaration_specifiers
  45                     | declaration_specifiers init_declarator_list

  46  array_declaration : declaration_specifiers
  47                    | declaration_specifiers init_declarator_list

  48  const_declaration : CONST scalar_declaration
  49                    | CONST array_declaration

  50  function_declaration : declaration_specifiers function_declarator

  51  declaration_specifiers : type_specifier
  52                         | type_specifier declaration_specifiers

  53  type_specifier : VOID
  54                 | CHAR
  55                 | SHORT
  56                 | INT
  57                 | LONG
  58                 | FLOAT
  59                 | DOUBLE
  60                 | SIGNED
  61                 | UNSIGNED

  62  init_declarator_list : init_declarator
  63                       | init_declarator_list ',' init_declarator

  64  init_declarator : declarator
  65                  | declarator '=' initializer

  66  declarator : direct_declarator
  67             | array_declarator
  68             | function_declarator
  69             | '(' declarator ')'

  70  direct_declarator : IDENTIFIER

  71  array_declarator : declarator '[' conditional_expression ']'

  72  function_declarator : declarator '(' parameter_type_list ')'
  73                      | declarator '(' ')'

  74  parameter_type_list : parameter_list
  75                      | parameter_list ',' ELLIPSIS

  76  parameter_list : parameter_declaration
  77                 | parameter_list ',' parameter_declaration

  78  parameter_declaration : declaration_specifiers declarator
  79                        | declaration_specifiers

  80  identifier_list : IDENTIFIER
  81                  | identifier_list ',' IDENTIFIER

  82  initializer : assignment_expression
  83              | '{' initializer_list '}'
  84              | '{' initializer_list ',' '}'

  85  initializer_list : initializer
  86                   | initializer_list ',' initializer

  87  expression : assignment_expression
  88             | expression ',' assignment_expression

  89  assignment_expression : conditional_expression
  90                        | unary_expression assignment_operator assignment_expression

  91  assignment_operator : '='
  92                      | MUL_ASSIGN
  93                      | DIV_ASSIGN
  94                      | MOD_ASSIGN
  95                      | ADD_ASSIGN
  96                      | SUB_ASSIGN

  97  conditional_expression : logical_or_expression
  98                         | logical_or_expression '?' expression ':' conditional_expression

  99  logical_or_expression : logical_and_expression
 100                        | logical_or_expression OR_OP logical_and_expression

 101  logical_and_expression : inclusive_or_expression
 102                         | logical_and_expression AND_OP inclusive_or_expression

 103  inclusive_or_expression : exclusive_or_expression
 104                          | inclusive_or_expression '|' exclusive_or_expression

 105  exclusive_or_expression : and_expression
 106                          | exclusive_or_expression '^' and_expression

 107  and_expression : equality_expression
 108                 | and_expression '&' equality_expression

 109  equality_expression : relational_expression
 110                      | equality_expression EQ_OP relational_expression
 111                      | equality_expression NE_OP relational_expression

 112  relational_expression : shift_expression
 113                        | relational_expression '<' shift_expression
 114                        | relational_expression '>' shift_expression
 115                        | relational_expression LE_OP shift_expression
 116                        | relational_expression GE_OP shift_expression

 117  shift_expression : additive_expression
 118                   | shift_expression LEFT_OP additive_expression
 119                   | shift_expression RIGHT_OP additive_expression

 120  additive_expression : additive_expression '+' multiplicative_expression
 121                      | additive_expression '-' multiplicative_expression
 122                      | multiplicative_expression

 123  multiplicative_expression : multiplicative_expression '*' cast_expression
 124                            | multiplicative_expression '/' cast_expression
 125                            | multiplicative_expression '%' cast_expression
 126                            | cast_expression

 127  cast_expression : unary_expression
 128                  | '(' type_specifier ')' cast_expression

 129  unary_expression : postfix_expression
 130                   | INC_OP unary_expression
 131                   | DEC_OP unary_expression
 132                   | unary_operator cast_expression

 133  unary_operator : '&'
 134                 | '*'
 135                 | '+'
 136                 | '-'
 137                 | '~'
 138                 | '!'

 139  postfix_expression : primary_expression
 140                     | FUNCTION
 141                     | postfix_expression '[' expression ']'
 142                     | postfix_expression '(' ')'
 143                     | postfix_expression '(' argument_expression_list ')'
 144                     | postfix_expression INC_OP
 145                     | postfix_expression DEC_OP

 146  argument_expression_list : assignment_expression
 147                           | argument_expression_list ',' assignment_expression

 148  primary_expression : '(' expression ')'
 149                     | constant
 150                     | IDENTIFIER
 151                     | STRING_LITERAL

 152  constant : CONSTANT
 153           | CCONSTANT
 154           | FCONSTANT

state 0
	$accept : . program $end  (0)

	IDENTIFIER  shift 1
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'('  shift 12
	.  error

	program  goto 13
	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	array_declarator  goto 18
	function_declarator  goto 19
	declaration  goto 20
	declaration_specifiers  goto 21
	type_specifier  goto 22
	declarator  goto 23
	direct_declarator  goto 24
	function_definition  goto 25
	external_declaration  goto 26
	translation_unit  goto 27


state 1
	direct_declarator : IDENTIFIER .  (70)

	.  reduce 70


state 2
	type_specifier : CHAR .  (54)

	.  reduce 54


state 3
	type_specifier : SHORT .  (55)

	.  reduce 55


state 4
	type_specifier : INT .  (56)

	.  reduce 56


state 5
	type_specifier : LONG .  (57)

	.  reduce 57


state 6
	type_specifier : SIGNED .  (60)

	.  reduce 60


state 7
	type_specifier : UNSIGNED .  (61)

	.  reduce 61


state 8
	type_specifier : FLOAT .  (58)

	.  reduce 58


state 9
	type_specifier : DOUBLE .  (59)

	.  reduce 59


state 10
	const_declaration : CONST . scalar_declaration  (48)
	const_declaration : CONST . array_declaration  (49)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	VOID  shift 11
	.  error

	scalar_declaration  goto 28
	array_declaration  goto 29
	declaration_specifiers  goto 30
	type_specifier  goto 22


state 11
	type_specifier : VOID .  (53)

	.  reduce 53


state 12
	declarator : '(' . declarator ')'  (69)

	IDENTIFIER  shift 1
	'('  shift 12
	.  error

	array_declarator  goto 18
	function_declarator  goto 19
	declarator  goto 31
	direct_declarator  goto 24


state 13
	$accept : program . $end  (0)

	$end  accept


state 14
	declaration : scalar_declaration . ';'  (40)

	';'  shift 32
	.  error


state 15
	declaration : array_declaration . ';'  (41)

	';'  shift 33
	.  error


state 16
	declaration : const_declaration . ';'  (42)

	';'  shift 34
	.  error


state 17
	declaration : function_declaration . ';'  (43)

	';'  shift 35
	.  error


state 18
	declarator : array_declarator .  (67)

	.  reduce 67


state 19
	declarator : function_declarator .  (68)

	.  reduce 68


state 20
	external_declaration : declaration .  (5)

	.  reduce 5


21: reduce/reduce conflict (reduce 44, reduce 46) on ';'
state 21
	function_definition : declaration_specifiers . declarator compound_statement  (6)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (7)
	scalar_declaration : declaration_specifiers .  (44)
	scalar_declaration : declaration_specifiers . init_declarator_list  (45)
	array_declaration : declaration_specifiers .  (46)
	array_declaration : declaration_specifiers . init_declarator_list  (47)
	function_declaration : declaration_specifiers . function_declarator  (50)

	IDENTIFIER  shift 1
	'('  shift 12
	';'  reduce 44

	array_declarator  goto 18
	function_declarator  goto 36
	init_declarator_list  goto 37
	init_declarator  goto 38
	declarator  goto 39
	direct_declarator  goto 24


state 22
	declaration_specifiers : type_specifier .  (51)
	declaration_specifiers : type_specifier . declaration_specifiers  (52)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	VOID  shift 11
	IDENTIFIER  reduce 51
	';'  reduce 51
	','  reduce 51
	'('  reduce 51
	')'  reduce 51

	declaration_specifiers  goto 40
	type_specifier  goto 22


state 23
	function_definition : declarator . compound_statement  (8)
	function_definition : declarator . declaration_list compound_statement  (9)
	array_declarator : declarator . '[' conditional_expression ']'  (71)
	function_declarator : declarator . '(' parameter_type_list ')'  (72)
	function_declarator : declarator . '(' ')'  (73)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'{'  shift 41
	'('  shift 42
	'['  shift 43
	.  error

	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	compound_statement  goto 44
	declaration  goto 45
	declaration_specifiers  goto 46
	type_specifier  goto 22
	declaration_list  goto 47


state 24
	declarator : direct_declarator .  (66)

	.  reduce 66


state 25
	external_declaration : function_definition .  (4)

	.  reduce 4


state 26
	translation_unit : external_declaration .  (2)

	.  reduce 2


state 27
	program : translation_unit .  (1)
	translation_unit : translation_unit . external_declaration  (3)

	IDENTIFIER  shift 1
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'('  shift 12
	$end  reduce 1

	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	array_declarator  goto 18
	function_declarator  goto 19
	declaration  goto 20
	declaration_specifiers  goto 21
	type_specifier  goto 22
	declarator  goto 23
	direct_declarator  goto 24
	function_definition  goto 25
	external_declaration  goto 48


state 28
	const_declaration : CONST scalar_declaration .  (48)

	.  reduce 48


state 29
	const_declaration : CONST array_declaration .  (49)

	.  reduce 49


30: reduce/reduce conflict (reduce 44, reduce 46) on ';'
state 30
	scalar_declaration : declaration_specifiers .  (44)
	scalar_declaration : declaration_specifiers . init_declarator_list  (45)
	array_declaration : declaration_specifiers .  (46)
	array_declaration : declaration_specifiers . init_declarator_list  (47)

	IDENTIFIER  shift 1
	'('  shift 12
	';'  reduce 44

	array_declarator  goto 18
	function_declarator  goto 19
	init_declarator_list  goto 37
	init_declarator  goto 38
	declarator  goto 49
	direct_declarator  goto 24


state 31
	declarator : '(' declarator . ')'  (69)
	array_declarator : declarator . '[' conditional_expression ']'  (71)
	function_declarator : declarator . '(' parameter_type_list ')'  (72)
	function_declarator : declarator . '(' ')'  (73)

	'('  shift 42
	')'  shift 50
	'['  shift 43
	.  error


state 32
	declaration : scalar_declaration ';' .  (40)

	.  reduce 40


state 33
	declaration : array_declaration ';' .  (41)

	.  reduce 41


state 34
	declaration : const_declaration ';' .  (42)

	.  reduce 42


state 35
	declaration : function_declaration ';' .  (43)

	.  reduce 43


36: reduce/reduce conflict (reduce 50, reduce 68) on ';'
state 36
	function_declaration : declaration_specifiers function_declarator .  (50)
	declarator : function_declarator .  (68)

	CHAR  reduce 68
	SHORT  reduce 68
	INT  reduce 68
	LONG  reduce 68
	SIGNED  reduce 68
	UNSIGNED  reduce 68
	FLOAT  reduce 68
	DOUBLE  reduce 68
	CONST  reduce 68
	VOID  reduce 68
	';'  reduce 50
	','  reduce 68
	'='  reduce 68
	'{'  reduce 68
	'('  reduce 68
	'['  reduce 68


37: reduce/reduce conflict (reduce 45, reduce 47) on ';'
state 37
	scalar_declaration : declaration_specifiers init_declarator_list .  (45)
	array_declaration : declaration_specifiers init_declarator_list .  (47)
	init_declarator_list : init_declarator_list . ',' init_declarator  (63)

	','  shift 51
	';'  reduce 45


state 38
	init_declarator_list : init_declarator .  (62)

	.  reduce 62


state 39
	function_definition : declaration_specifiers declarator . compound_statement  (6)
	function_definition : declaration_specifiers declarator . declaration_list compound_statement  (7)
	init_declarator : declarator .  (64)
	init_declarator : declarator . '=' initializer  (65)
	array_declarator : declarator . '[' conditional_expression ']'  (71)
	function_declarator : declarator . '(' parameter_type_list ')'  (72)
	function_declarator : declarator . '(' ')'  (73)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'='  shift 52
	'{'  shift 41
	'('  shift 42
	'['  shift 43
	';'  reduce 64
	','  reduce 64

	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	compound_statement  goto 53
	declaration  goto 45
	declaration_specifiers  goto 46
	type_specifier  goto 22
	declaration_list  goto 54


state 40
	declaration_specifiers : type_specifier declaration_specifiers .  (52)

	.  reduce 52


state 41
	compound_statement : '{' . '}'  (12)
	compound_statement : '{' . compound_list '}'  (13)

	IDENTIFIER  shift 55
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	CASE  shift 62
	DEFAULT  shift 63
	IF  shift 64
	SWITCH  shift 65
	WHILE  shift 66
	DO  shift 67
	FOR  shift 68
	CONTINUE  shift 69
	BREAK  shift 70
	RETURN  shift 71
	FUNCTION  shift 72
	';'  shift 73
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'{'  shift 41
	'}'  shift 78
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 86
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 98
	assignment_expression  goto 99
	expression  goto 100
	expression_statement  goto 101
	statement  goto 102
	compound_statement  goto 103
	compound_list  goto 104
	selection_statement  goto 105
	jump_statement  goto 106
	iteration_statement  goto 107
	labeled_statement  goto 108
	declaration  goto 109
	declaration_specifiers  goto 46
	type_specifier  goto 22


state 42
	function_declarator : declarator '(' . parameter_type_list ')'  (72)
	function_declarator : declarator '(' . ')'  (73)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	VOID  shift 11
	')'  shift 110
	.  error

	declaration_specifiers  goto 111
	type_specifier  goto 22
	parameter_type_list  goto 112
	parameter_list  goto 113
	parameter_declaration  goto 114


state 43
	array_declarator : declarator '[' . conditional_expression ']'  (71)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	FUNCTION  shift 72
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 116
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 117


state 44
	function_definition : declarator compound_statement .  (8)

	.  reduce 8


state 45
	declaration_list : declaration .  (10)

	.  reduce 10


46: reduce/reduce conflict (reduce 44, reduce 46) on ';'
state 46
	scalar_declaration : declaration_specifiers .  (44)
	scalar_declaration : declaration_specifiers . init_declarator_list  (45)
	array_declaration : declaration_specifiers .  (46)
	array_declaration : declaration_specifiers . init_declarator_list  (47)
	function_declaration : declaration_specifiers . function_declarator  (50)

	IDENTIFIER  shift 1
	'('  shift 12
	';'  reduce 44

	array_declarator  goto 18
	function_declarator  goto 36
	init_declarator_list  goto 37
	init_declarator  goto 38
	declarator  goto 49
	direct_declarator  goto 24


state 47
	function_definition : declarator declaration_list . compound_statement  (9)
	declaration_list : declaration_list . declaration  (11)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'{'  shift 41
	.  error

	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	compound_statement  goto 118
	declaration  goto 119
	declaration_specifiers  goto 46
	type_specifier  goto 22


state 48
	translation_unit : translation_unit external_declaration .  (3)

	.  reduce 3


state 49
	init_declarator : declarator .  (64)
	init_declarator : declarator . '=' initializer  (65)
	array_declarator : declarator . '[' conditional_expression ']'  (71)
	function_declarator : declarator . '(' parameter_type_list ')'  (72)
	function_declarator : declarator . '(' ')'  (73)

	'='  shift 52
	'('  shift 42
	'['  shift 43
	';'  reduce 64
	','  reduce 64


state 50
	declarator : '(' declarator ')' .  (69)

	.  reduce 69


state 51
	init_declarator_list : init_declarator_list ',' . init_declarator  (63)

	IDENTIFIER  shift 1
	'('  shift 12
	.  error

	array_declarator  goto 18
	function_declarator  goto 19
	init_declarator  goto 120
	declarator  goto 49
	direct_declarator  goto 24


state 52
	init_declarator : declarator '=' . initializer  (65)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	FUNCTION  shift 72
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'{'  shift 121
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 86
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 98
	assignment_expression  goto 122
	initializer  goto 123


state 53
	function_definition : declaration_specifiers declarator compound_statement .  (6)

	.  reduce 6


state 54
	function_definition : declaration_specifiers declarator declaration_list . compound_statement  (7)
	declaration_list : declaration_list . declaration  (11)

	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	CONST  shift 10
	VOID  shift 11
	'{'  shift 41
	.  error

	scalar_declaration  goto 14
	array_declaration  goto 15
	const_declaration  goto 16
	function_declaration  goto 17
	compound_statement  goto 124
	declaration  goto 119
	declaration_specifiers  goto 46
	type_specifier  goto 22


state 55
	labeled_statement : IDENTIFIER . ':' statement  (24)
	primary_expression : IDENTIFIER .  (150)

	':'  shift 125
	INC_OP  reduce 150
	DEC_OP  reduce 150
	LEFT_OP  reduce 150
	RIGHT_OP  reduce 150
	LE_OP  reduce 150
	GE_OP  reduce 150
	EQ_OP  reduce 150
	NE_OP  reduce 150
	AND_OP  reduce 150
	OR_OP  reduce 150
	MUL_ASSIGN  reduce 150
	DIV_ASSIGN  reduce 150
	MOD_ASSIGN  reduce 150
	ADD_ASSIGN  reduce 150
	SUB_ASSIGN  reduce 150
	';'  reduce 150
	','  reduce 150
	'='  reduce 150
	'?'  reduce 150
	'|'  reduce 150
	'^'  reduce 150
	'&'  reduce 150
	'>'  reduce 150
	'<'  reduce 150
	'+'  reduce 150
	'-'  reduce 150
	'*'  reduce 150
	'/'  reduce 150
	'%'  reduce 150
	'('  reduce 150
	'['  reduce 150


state 56
	constant : FCONSTANT .  (154)

	.  reduce 154


state 57
	constant : CONSTANT .  (152)

	.  reduce 152


state 58
	constant : CCONSTANT .  (153)

	.  reduce 153


state 59
	primary_expression : STRING_LITERAL .  (151)

	.  reduce 151


state 60
	unary_expression : INC_OP . unary_expression  (130)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	FUNCTION  shift 72
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'('  shift 126
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 127


state 61
	unary_expression : DEC_OP . unary_expression  (131)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	FUNCTION  shift 72
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'('  shift 126
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 128


state 62
	labeled_statement : CASE . conditional_expression ':' statement  (25)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	FUNCTION  shift 72
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 116
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 129


state 63
	labeled_statement : DEFAULT . ':' statement  (26)

	':'  shift 130
	.  error


state 64
	selection_statement : IF . '(' expression ')' compound_statement  (27)
	selection_statement : IF . '(' expression ')' compound_statement ELSE compound_statement  (28)

	'('  shift 131
	.  error


state 65
	selection_statement : SWITCH . '(' expression ')' compound_statement  (29)

	'('  shift 132
	.  error


state 66
	iteration_statement : WHILE . '(' expression ')' statement  (30)

	'('  shift 133
	.  error


state 67
	iteration_statement : DO . statement WHILE '(' expression ')' ';'  (31)

	IDENTIFIER  shift 55
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	CASE  shift 62
	DEFAULT  shift 63
	IF  shift 64
	SWITCH  shift 65
	WHILE  shift 66
	DO  shift 67
	FOR  shift 68
	CONTINUE  shift 69
	BREAK  shift 70
	RETURN  shift 71
	FUNCTION  shift 72
	';'  shift 73
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'{'  shift 41
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 86
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 98
	assignment_expression  goto 99
	expression  goto 100
	expression_statement  goto 101
	statement  goto 134
	compound_statement  goto 103
	selection_statement  goto 105
	jump_statement  goto 106
	iteration_statement  goto 107
	labeled_statement  goto 108


state 68
	iteration_statement : FOR . '(' expression_statement expression_statement ')' statement  (32)
	iteration_statement : FOR . '(' expression_statement expression_statement expression ')' statement  (33)

	'('  shift 135
	.  error


state 69
	jump_statement : CONTINUE . ';'  (34)

	';'  shift 136
	.  error


state 70
	jump_statement : BREAK . ';'  (35)

	';'  shift 137
	.  error


state 71
	jump_statement : RETURN . ';'  (36)
	jump_statement : RETURN . expression ';'  (37)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	FUNCTION  shift 72
	';'  shift 138
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 86
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 98
	assignment_expression  goto 99
	expression  goto 139


state 72
	postfix_expression : FUNCTION .  (140)

	.  reduce 140


state 73
	expression_statement : ';' .  (38)

	.  reduce 38


state 74
	unary_operator : '&' .  (133)

	.  reduce 133


state 75
	unary_operator : '+' .  (135)

	.  reduce 135


state 76
	unary_operator : '-' .  (136)

	.  reduce 136


state 77
	unary_operator : '*' .  (134)

	.  reduce 134


state 78
	compound_statement : '{' '}' .  (12)

	.  reduce 12


state 79
	cast_expression : '(' . type_specifier ')' cast_expression  (128)
	primary_expression : '(' . expression ')'  (148)

	IDENTIFIER  shift 115
	FCONSTANT  shift 56
	CONSTANT  shift 57
	CCONSTANT  shift 58
	STRING_LITERAL  shift 59
	INC_OP  shift 60
	DEC_OP  shift 61
	CHAR  shift 2
	SHORT  shift 3
	INT  shift 4
	LONG  shift 5
	SIGNED  shift 6
	UNSIGNED  shift 7
	FLOAT  shift 8
	DOUBLE  shift 9
	VOID  shift 11
	FUNCTION  shift 72
	'&'  shift 74
	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'('  shift 79
	'~'  shift 80
	'!'  shift 81
	.  error

	constant  goto 82
	primary_expression  goto 83
	postfix_expression  goto 84
	unary_operator  goto 85
	unary_expression  goto 86
	cast_expression  goto 87
	multiplicative_expression  goto 88
	additive_expression  goto 89
	shift_expression  goto 90
	relational_expression  goto 91
	equality_expression  goto 92
	and_expression  goto 93
	exclusive_or_expression  goto 94
	inclusive_or_expression  goto 95
	logical_and_expression  goto 96
	logical_or_expression  goto 97
	conditional_expression  goto 98
	assignment_expression  goto 99
	expression  goto 140
	type_specifier  goto 141


state 80
	unary_operator : '~' .  (137)

	.  reduce 137


state 81
	unary_operator : '!' .  (138)

	.  reduce 138


state 82
	primary_expression : constant .  (149)

	.  reduce 149


state 83
	postfix_expression : primary_expression .  (139)

	.  reduce 139

